поправил путь до картинок

--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -7,7 +7,7 @@ block content
   .container
     .welcome
       .welcome-picture
-        img(src="/img/about-pic.jpg" alt="").welcome__picture-img
+        img(src="img/about-pic.jpg" alt="").welcome__picture-img
         .welcome-picture__text О компании
       .welcome-text
         .welcome-text__left
