--- a/views/pages/product.pug
+++ b/views/pages/product.pug
@@ -51,14 +51,14 @@ block content
             ul.inner-products__list
               - for (var i = 0; i < 3; i++)
                 li.inner-products__item
-                  img(src=`/img/watches/small-${i + 1}.jpg`, alt="")
+                  img(src=`img/watches/small-${i + 1}.jpg`, alt="")
           .inner-products__info-display
-            img(src="/img/watches/big-1.jpg", alt="")
+            img(src="img/watches/big-1.jpg", alt="")
           .inner-products__info-items
             ul.inner-products__list
               - for (var i = 0; i < 3; i++)
                 li.inner-products__item
-                  img(src=`/img/watches/small-${i + 1}.jpg`, alt="")
+                  img(src=`img/watches/small-${i + 1}.jpg`, alt="")
         .inner-products__content
           p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates nesciunt tempora aut mollitia! Laborum veritatis, ea explicabo quidem optio possimus accusamus aut enim modi saepe similique, autem alias maxime minima!
           p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates nesciunt tempora aut mollitia! Laborum veritatis, ea explicabo quidem optio possimus accusamus aut enim modi saepe similique, autem alias maxime minima!
