--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -1,7 +1,7 @@
 header.header
   .header-container
-    a.logo(href='/')
-      img(src="/img/logo.png", alt="")
+    a.logo(href='./index.html')
+      img(src="img/logo.png", alt="")
     nav.menu
       ul.menu__list
         -
